# coffee_break_poster

./: .gitignore  LICENSE  README.md  SKILL.md  config.yaml  pyproject.toml
examples/arxiv-2605-21574/: 8dd5e90e-e464-4d6e-8a4e-61b0b941e32d_content_list.json  8dd5e90e-e464-4d6e-8a4e-61b0b941e32d_content_list_v2.json  8dd5e90e-e464-4d6e-8a4e-61b0b941e32d_model.json  layout.json  paper.md  poster.html  source.json
examples/mineru_sample/: paper.md
templates/: phone_9x16_figure_focus.html  screen_16x9_figure_focus.html
tests/: test_tools.py
tools/: cbp.py  check.py  common.py  config.py  inputs.py  mineru.py  paper_inspect.py  render.py  scaffold.py
